<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_message"
            android:title="@string/title_activity_main" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/title_activity_main_contact" />
    </group>

    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_support" />

            <item
                android:id="@+id/nav_disconnect"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/nav_disconnect" />
        </menu>
    </item>

</menu>
