<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/grayLighter"
        android:text="@string/dialog_add_contact"
        android:id="@+id/textView" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/username"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:hint="@string/prompt_username"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameBox"
        android:padding="10dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:background="@drawable/background_button"
            android:textColor="@color/grayLighter"
            android:layout_marginRight="5dp"
            android:text="@string/action_cancel" />

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:background="@drawable/background_button"
            android:textColor="@color/grayLighter"
            android:layout_marginLeft="5dp"
            android:text="@string/action_add"/>
    </LinearLayout>
</RelativeLayout>
